<resources>
    <string name="app_name">My Awesome Driver App</string>
    <string name="unaccepted_task">"Unaccepted"</string>
    <string name="find_me_message">"Customer Asked To Find Him"</string>
    <string name="tomorrow_label_for_date">"Tomorrow #{time_label}"</string>
    <string name="address_type_commercial">"Commercial"</string>
    <string name="address_type_educational">"Educational"</string>
    <string name="address_type_government">"Government"</string>
    <string name="address_type_industrial">"Industrial"</string>
    <string name="address_type_medical">"Medical"</string>
    <string name="address_type_residential">"Residential"</string>
    <string name="button_grab">"Grab"</string>
    <string name="external_id_on_task_list_item">"##{external_id}"</string>
    <string name="time_window">"#{start_time} - #{end_time}"</string>
    <string name="notification_in_shift_title">You are online</string>
    <string name="notification_in_shift_message">Bringg SDK in working in the background</string>
    <string name="button_text_waypoint_arrive">Arrive</string>
    <string name="button_text_waypoint_leave">Leave</string>
    <string name="order_description">"Order Description"</string>
    <string name="order_inventory">"Order Inventory"</string>
    <string name="eta_title">"ETA"</string>
    <string name="scheduled_at">"Scheduled At"</string>
    <string name="scheduled_for">"Scheduled For"</string>
    <string name="time_window_title">"Window"</string>
    <string name="contact">"Contact"</string>

    <string name="inventories_not_found">"Inventories not found"</string>
    <string name="inventory_action_apply">"Apply"</string>
    <string name="inventory_action_title">"#{action} of #{inventory}"</string>
    <string name="inventory_apply_button_text">"Apply changes"</string>
    <string name="inventory_collect_label">"PICKUP"</string>
    <string name="inventory_collected">"#{collected_count}/#{total_count} Picked Up"</string>
    <string name="inventory_deliver_label">"DROPOFF"</string>
    <string name="inventory_delivered">"#{delivered_count}/#{total_count} Dropped Off"</string>
    <string name="inventory_dropoff_count_title">"Dropoff #{items_count} items"</string>
    <string name="inventory_edit_items_collected">"items picked up"</string>
    <string name="inventory_edit_items_targeted_quantity">"targeted quantity"</string>
    <string name="inventory_height">"H #{height}"</string>
    <string name="inventory_image_item_collected">"#{collected_count} of #{total_count} collected"</string>
    <string name="inventory_image_item_delivered">"#{delivered_count} of #{total_count} delivered"</string>
    <string name="inventory_item_title">"Item"</string>
    <string name="inventory_length">"L #{length}"</string>
    <string name="inventory_list_header_collect">"#{count} items to collect"</string>
    <string name="inventory_list_header_deliver">"#{count} items to deliver"</string>
    <string name="inventory_list_item_collected">"of #{total_count} collected"</string>
    <string name="inventory_list_item_delivered">"of #{total_count} delivered"</string>
    <string name="inventory_list_item_external_id">"##{inventory_external_id}"</string>
    <string name="inventory_list_item_rejected">"(#{items_count} rejected)"</string>
    <string name="inventory_list_item_title">"#{total_count} x #{inventory_title}"</string>
    <string name="inventory_list_item_x_sub_items">"#{sub_items_count} &gt;"</string>
    <string name="inventory_list_update">"Your inventory list has been updated"</string>
    <string name="inventory_not_verified">"not verified"</string>
    <string name="inventory_package_name">"Package [#{package_name}]"</string>
    <string name="inventory_parent_partially_collected">"Partially collected"</string>
    <string name="inventory_parent_partially_delivered">"Partially delivered"</string>
    <string name="inventory_parent_partially_rejected">"Partially rejected"</string>
    <string name="inventory_pickup_count_title">"Pickup #{items_count} items"</string>
    <string name="inventory_plus_quantity">", +#{inventory_item_quantity}"</string>
    <string name="inventory_pricing_amount_paid">"Amount paid (#{payment_method})"</string>
    <string name="inventory_pricing_delivery_fee">"Delivery fee"</string>
    <string name="inventory_pricing_header_title">"Inventory and Pricing"</string>
    <string name="inventory_pricing_rejected_quantity">"#{quantity}\nrejected"</string>
    <string name="inventory_pricing_table_header_item">"ITEM"</string>
    <string name="inventory_pricing_table_header_price">"PRICE"</string>
    <string name="inventory_pricing_table_header_total">"TOTAL ITEMS: #{items_count}"</string>
    <string name="inventory_pricing_total_incl_vat">"Total (incl. VAT)"</string>
    <string name="inventory_pricing_total_to_be_paid">"Total to be paid"</string>
    <string name="inventory_quantity">"#{handled_quantity} of #{total_quantity}"</string>
    <string name="inventory_quantity_action_collect">"Collect"</string>
    <string name="inventory_quantity_action_collect_all">"Collect all"</string>
    <string name="inventory_quantity_action_deliver">"Deliver"</string>
    <string name="inventory_quantity_action_deliver_all">"Deliver all"</string>
    <string name="inventory_quantity_action_partial">"Partial Quantity"</string>
    <string name="inventory_quantity_action_reject">"Reject"</string>
    <string name="inventory_quantity_action_reject_all">"Reject all"</string>
    <string name="inventory_quantity_title">"Quantity"</string>
    <string name="inventory_ready_to_deliver">"ready to drop off"</string>
    <string name="inventory_sub_item_qty_change_selection_all_items">"All items in this package"</string>
    <string name="inventory_sub_item_qty_change_selection_dialog_description">"You have already updated some items in this package.\nWhich inventory items would you like to update?"</string>
    <string name="inventory_sub_item_qty_change_selection_dialog_title">""""</string>
    <string name="inventory_sub_item_qty_change_selection_just_un_changed_items">"Only items not already updated"</string>
    <string name="inventory_title">"#{inventory_item_id} x #{inventory_title}"</string>
    <string name="inventory_title_label">"Order:"</string>
    <string name="inventory_title_total_items">"Total Items:"</string>
    <string name="inventory_width">"W #{width}"</string>
    <string name="quantifier_string">"##{string_value}"</string>
    <string name="deliver_tag_text">"Deliver"</string>
    <string name="delivered">"Dropped Off"</string>
    <string name="delivering">"Dropping Off"</string>
    <string name="pickup_area">"Pickup Area"</string>
    <string name="dropoff_area">"Dropoff Area"</string>

    <string name="edit_task_hint_address">"Address"</string>
    <string name="edit_task_hint_address_second_line">"Second Address Line"</string>
    <string name="edit_task_hint_customer_email">"Customer Email Address"</string>
    <string name="edit_task_hint_customer_id">"Customer ID"</string>
    <string name="edit_task_hint_customer_name">"Customer Name"</string>
    <string name="edit_task_hint_customer_phone">"Customer Phone Number"</string>
    <string name="edit_task_hint_end_time_window">"Promised Window End Time"</string>
    <string name="edit_task_hint_external_id">"External ID"</string>
    <string name="edit_task_hint_scan_code">"Scan Code"</string>
    <string name="edit_task_hint_scheduled_date">"Scheduled Date"</string>
    <string name="edit_task_hint_scheduled_time">"Scheduled Time"</string>
    <string name="edit_task_hint_service_plan">"Service plan"</string>
    <string name="edit_task_hint_start_time_window">"Promised Window Start Time"</string>
    <string name="edit_task_hint_title">"Title"</string>
    <string name="edit_task_hint_zipcode">"ZipCode"</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="task_list">Orders</string>
    <string name="login">Login</string>
    <string name="login_merchant_selection">Select Company</string>
    <string name="login_merchant_selection_title">Please choose your current employer</string>
    <string name="start_shift">Start Shift</string>
    <string name="end_shift">End Shift</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="choose_cancel_reason">Choose Cancel Reason</string>
    <string name="apply">Apply</string>

    <string name="mandatory_actions_not_taken_title">"Following actions must be completed:"</string>
    <string name="label_task_actions">Task Actions</string>
    <string name="title_unread_messages">%d Unread messages</string>
    <string name="edit_waypoint">Edit Waypoint</string>

    <string name="take_ownership">Take Ownership</string>
    <string name="update_extras">Update Extras</string>
    <string name="type_item_barcode_to_scan">Type item barcode to scan</string>
    <string name="inventory">Inventory</string>

    <plurals name="merge_orders_button">
        <item quantity="zero">Merge Orders</item>
        <item quantity="other">Merge %d Orders</item>
    </plurals>

    <plurals name="un_merge_orders_button">
        <item quantity="zero">Break Merged Order</item>
        <item quantity="one">Break Merged Order</item>
        <item quantity="other">Break %d Merged Orders</item>
    </plurals>

    <plurals name="cancel_task_button">
        <item quantity="zero">Cancel Order</item>
        <item quantity="one">Cancel Order</item>
        <item quantity="other">Cancel %d Orders</item>
    </plurals>

</resources>
