<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_street_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Street"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/zipcode_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_second_line_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_second_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_hint_address_second_line"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/zipcode_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_city_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="City"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/zipcode_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_house_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/house_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="House number"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/zipcode_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zipcode_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_hint_zipcode"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/scheduled_at_date_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/time_window_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_time_window_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_time_window"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_task_hint_start_time_window"
                    android:inputType="time"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/end_time_window_layout"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_time_window_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_time_window"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_task_hint_end_time_window"
                    android:inputType="time"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/scan_code_layout"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_hint_customer_name"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/customer_phone_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_hint_customer_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusDown="@+id/customer_email_layout"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_hint_customer_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_waypoint_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="Submit" />
    </LinearLayout>
</ScrollView>